--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cron": "^4.3.1",
-    "express": "^4.18.2"
+    "geoip-lite": "^1.4.7"
   }
 }
