--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cron": "^4.3.1",
-    "geoip-lite": "^1.4.7"
+    "geoip-lite": "^1.4.7",
+    "ua-parser-js": "^1.0.35"
   }
 }
